[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-to-sentiment"
version = "0.0.1"
authors = [
  { name="Kokila M", email="kokilakoki3376@gmail.com" },
]
description = "🎵 Audio to Sentiment Transcriber using AssemblyAI."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "validators", 
  "typing_extensions",
  "requests"
]

[project.urls]
"Homepage" = "https://github.com/kokilamariyayi/audio-to-sentiment"
"Bug Tracker" = "https://github.com/kokilamariyayi/audio-to-sentiment/issues"